RESOLVED FIXED151183
op_assert should declare that it uses the first register argument
https://bugs.webkit.org/show_bug.cgi?id=151183
Summary op_assert should declare that it uses the first register argument
Yusuke Suzuki
Reported 2015-11-12 01:05:46 PST
op_assert should declare that it uses the first register argument
Attachments
Patch (1.69 KB, patch)
2015-11-12 01:08 PST, Yusuke Suzuki
no flags
Yusuke Suzuki
Comment 1 2015-11-12 01:08:11 PST
Geoffrey Garen
Comment 2 2015-11-12 12:47:44 PST
Comment on attachment 265371 [details] Patch r=me
WebKit Commit Bot
Comment 3 2015-11-13 10:52:05 PST
Comment on attachment 265371 [details] Patch Clearing flags on attachment: 265371 Committed r192434: <http://trac.webkit.org/changeset/192434>
WebKit Commit Bot
Comment 4 2015-11-13 10:52:09 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.