op_assert should declare that it uses the first register argument https://bugs.webkit.org/show_bug.cgi?id=151183

Reviewed by Geoffrey Garen.

op_assert(conditionRegister, lineNumber) should declare that it
*uses* (in terms of use-def) the first `conditionRegister` and
it does not define any variables.

* bytecode/BytecodeUseDef.h:
(JSC::computeUsesForBytecodeOffset):


Canonical link: https://commits.webkit.org/169435@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192434 268f45cc-cd09-0410-ab3c-d52691b4dbfc